--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hxlbiteschecker",
+  "homepage": "https://simonbjohnson.github.io/hxlbiteschecker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,9 +14,14 @@
     "topojson": "^3.0.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"
   }
 }
